re-implement form-control class on input elements to fix form layout issues. Remove css rules (margin) applied to input elements.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -188,10 +188,6 @@ footer {
     color: #06283D;
 }
 
-input {
-    display: inline-block;
-    margin: 10px 10px;
-}
 
 /* --------------------------- Media Queries */
 
